--- a/css/gamer.css
+++ b/css/gamer.css
@@ -10,13 +10,15 @@ body {
 
 .nav-container {
     min-height: 50px;
+    max-height: 100px;
     display: flex;
     align-items: center;
     max-width: 1440px;
     background: #FFF;
-    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.1);
+    box-shadow: 2px 4px 30px rgba(0, 0, 0, 0.05);
     color: black;
     justify-content: space-around;
+    /* margin-bottom: 10px; */
 }
 
 .logo-container {
@@ -65,4 +67,45 @@ body {
     border-radius: 8px;
     background: rgba(11, 2, 35, 0.10);
     padding: 16px 25px;
+}
+
+/* banner section starts here */
+.banner-container {
+    height: 500px;
+    border: 1px solid red;
+    display: flex;
+    text-align: center;
+}
+
+.banner-content {
+    width: 50%;
+    height: 100%;
+    background-image: url('../images/Group\ 14.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    justify-content: center;
+    align-items: center;
+}
+
+.banner-content .banner-title1 {
+    color: #0B0223;
+    font-size: 40px;
+    font-weight: 600;
+    text-transform: uppercase;
+    /* border: 1px solid red; */
+}
+
+.banner-content .banner-title2 {
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-size: 70px;
+    font-weight: 800;
+    /* border: 1px solid red; */
+}
+
+.banner-images {
+    width: 50%;
+
 }
