--- a/css/gamer.css
+++ b/css/gamer.css
@@ -10,15 +10,13 @@ body {
 
 .nav-container {
     min-height: 50px;
-    max-height: 100px;
     display: flex;
     align-items: center;
     max-width: 1440px;
     background: #FFF;
-    box-shadow: 2px 4px 30px rgba(0, 0, 0, 0.05);
+    /* box-shadow: 2px 4px 30px rgba(0, 0, 0, 0.05); */
     color: black;
     justify-content: space-around;
-    /* margin-bottom: 10px; */
 }
 
 .logo-container {
@@ -71,28 +69,29 @@ body {
 
 /* banner section starts here */
 .banner-container {
-    height: 500px;
-    border: 1px solid red;
+    /* border: 1px solid red; */
     display: flex;
-    text-align: center;
+    text-align: start;
+    gap: 30px
 }
 
 .banner-content {
     width: 50%;
-    height: 100%;
     background-image: url('../images/Group\ 14.png');
     background-repeat: no-repeat;
     background-size: contain;
-    justify-content: center;
-    align-items: center;
+    /* position: relative; */
+    /* border: 1px solid blue; */
+    padding: 60px 0px 80px 130px;
 }
+
 
 .banner-content .banner-title1 {
     color: #0B0223;
-    font-size: 40px;
+    font-size: 2.5rem;
     font-weight: 600;
     text-transform: uppercase;
-    border: 1px solid red;
+    /* border: 1px solid red; */
     margin-bottom: 0px;
 }
 
@@ -101,23 +100,76 @@ body {
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    font-size: 70px;
+    font-size: 4.3rem;
     font-weight: 800;
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
 }
 
-.banner-icons{
-    border: 1px solid pink;
+.banner-icons {
+    /* border: 1px solid pink; */
     width: 50%;
-    margin: 10px 250px;
+    margin: 10px 0px;
+    width: 100%;
 }
-.banner-icon-desc{
-    /* border: 1px solid blue; */
+
+.banner-icon-desc {
+    max-height: 30px;
     display: flex;
     gap: 1rem;
     align-items: center;
+    padding: 5px;
+    /* border: 1px solid pink; */
 }
+
+.banner-icon-desc p {
+    color: #534C64;
+    font-size: 1.2rem;
+    font-weight: 500;
+    text-transform: lowercase;
+}
+
+.fa-regular,
+.fa-download {
+    color: #F948B2;
+}
+
+.banner-btn {
+    display: inline-flex;
+    gap: 10px;
+}
+
+.primary-btn {
+    padding: 16px 35px;
+    border-radius: 48px;
+    background: var(--linear, linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%));
+    margin-right: 20px;
+    border: none;
+    color: #FFF;
+    font-size: 1.2rem;
+    font-weight: 600;
+    text-transform: uppercase;
+
+}
+
+.btn-2 {
+    padding: 16px 35px;
+    border-radius: 48px;
+    background: #4EC5F7;
+    border: none;
+    text-transform: uppercase;
+    color: #FFF;
+    font-size: 1.2rem;
+    font-weight: 600;
+    text-transform: uppercase;
+
+}
+
 .banner-images {
     width: 50%;
+    /* border: 2px solid red; */
 
+}
+
+.banner-images img {
+    width: 80%;
 }
