--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,6 +1,86 @@
 @media screen and (max-width: 425px) {
-    .nav-container , .nav-item-container {
+
+    .nav-container,
+    .nav-item-container {
         flex-direction: column;
     }
 
+    .banner-container {
+        flex-direction: column-reverse;
+        margin-top: 20px;
+        gap:0px;
+
+    }
+
+    .banner-content {
+        width: 100%;
+        height: 300px;
+        padding: 0px;
+        /* border: 1px solid blue; */
+        /* text-align: center; */
+        background-blend-mode: overlay;
+        /* padding-left: 50px; */
+    }
+
+
+    .banner-content .banner-title1 {
+        font-size: 1.5rem;
+        padding: 35px 0px 5px 70px;
+    }
+
+    .banner-content .banner-title2 {
+        font-size: 2rem;
+        font-weight: 800;
+        /* border: 1px solid blue; */
+    }
+
+    .banner-icons {
+        /* border: 1px solid pink; */
+        width: 100%;
+        margin: 0px;
+        padding: 0px 0px 5px 60px;
+        /* text-align: center; */
+    }
+
+    .banner-icon-desc {
+        max-height: 15px;
+        gap: 0.5rem;
+        padding: 5px;
+        /* margin-left: 120px; */
+        /* border: 1px solid pink; */
+    }
+
+    .banner-icon-desc p {
+        font-size: 0.7rem;
+        text-align: center;
+    }
+    .banner-btn {
+        gap: 15px;
+        padding: 5px 0px 5px 60px;
+    }
+    
+    .primary-btn {
+        padding: 8px 17px;
+        border-radius: 48px;
+        margin-right: 0px;
+        font-size: 0.8rem;
+    }
+    
+    .btn-2 {
+        padding: 8px 17px;
+        border-radius: 48px;
+        font-size: 0.8rem;
+    }
+    .banner-images {
+        width: 100%;
+        /* border: 2px solid red; */
+        background-blend-mode: overlay;
+        background-position-x: center;
+    
+    }
+    
+    .banner-images img {
+        width: 100%;
+    }
+    
 }
