--- a/css/gamer.css
+++ b/css/gamer.css
@@ -203,7 +203,36 @@ body {
     line-height: 30px;
     /* 150% */
 }
-
+.single-grid{
+    position: relative;
+    /* width: 200px;
+    height: 200px;
+    float: left;
+    margin-right: 10px; */
+}
+.single-grid div{
+    position: absolute;
+    top: 50%;
+    right: 10%;
+    color: white;
+    font-weight: 800;
+    margin-bottom: 5px;
+    font-family: sans-serif;
+    opacity: 50;
+    visibility: hidden;
+}
+.single-grid:hover{
+    border: 3px solid rgb(212, 20, 52);
+}
+.single-grid:hover img{
+    filter: brightness(30%);
+}
+.single-grid:hover div{
+    width: 150px;
+    padding: 50px 15px;
+    visibility: visible;
+    opacity: 0.7; 
+}
 .single-grid {
     /* width:30%; */
     border-radius: 10px;
