--- a/css/responsive.css
+++ b/css/responsive.css
@@ -4,14 +4,14 @@
     .nav-item-container {
         flex-direction: column;
     }
-
+    .nav-icon{
+        margin-bottom: 50px;
+    }
     .banner-container {
         flex-direction: column-reverse;
         margin-top: 20px;
         gap: 0px;
-
     }
-
     .banner-content {
         width: 100%;
         height: 300px;
